--- a/index.html
+++ b/index.html
@@ -10,14 +10,9 @@
   </head>
   <body>
 
-  <div class="welcome-container">
-    <p>Hello buddy!</p>
-    <p>Welcome to the CSS test</p>
-    <p>That blank page is all yours, let's make it rock!</p>
-  </div>
+  <div id="react-app-container" class="container"></div>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-  <script src="assets/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/g/algoliasearch@3(algoliasearchLite.min.js),algoliasearch.helper@2"></script>
+  <script src="/assets/js/app.js" charset="utf-8"></script>
   </body>
 </html>
