--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Restaurant Locator - by Algolia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/assets/css/normalize.css">
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/react-search-demo/assets/css/normalize.css">
+    <link rel="stylesheet" href="/react-search-demo/assets/css/main.css">
   </head>
   <body>
 
   <div id="react-app-container" class="container"></div>
 
   <script src="https://cdn.jsdelivr.net/g/algoliasearch@3(algoliasearchLite.min.js),algoliasearch.helper@2"></script>
-  <script src="/assets/js/app.js" charset="utf-8"></script>
+  <script src="/react-search-demo/assets/js/app.js" charset="utf-8"></script>
   </body>
 </html>
